--- a/Art_Gallery/templates/index.html
+++ b/Art_Gallery/templates/index.html
@@ -45,7 +45,7 @@
 		
 		<!-- NAVBAR -->
 		<!-- sticky nav -->
-		<nav class="navbar sticky-top navbar-expand-md navbar-light" style="background-color:rgba(255, 253, 218, 0.95);">
+		<nav class="navbar navbar-expand-md navbar-light" style="background-color:rgba(255, 253, 218, 0.95);">
 			<!-- container pushes items more center as opposed to putting them at the edge of each end of the screen -->
 			<div class="container">
 				<!-- navbar brand is the title -->
