--- a/Art_Gallery/templates/carousel.html
+++ b/Art_Gallery/templates/carousel.html
@@ -67,58 +67,103 @@
         <!-- CAROUSEL START -->
         {% if carouselObjects %}
         <div class="owl-carousel owl-theme owl-loaded" id="myCarousel" style=" margin: 0 auto !important;">
-            <!-- image -->
-            {% if "0" in carouselObjects.painting_left.url %}
+            <!-- 2 -->
+            {% if "0" in carouselObjects.painting_2.url %}
             <!-- skip it -->
             {% else %}
             <div class="item">
                 <div class="slide-content">
-                    <img src="{{carouselObjects.painting_left.url}}" />
+                    <img src="{{carouselObjects.painting_2.url}}" />
                 </div>
             </div>
             {% endif %}
-            {% if "0" in carouselObjects.painting.url %}
+            <!-- main -->
+            {% if "0" in carouselObjects.main_painting.url %}
             <!-- skip it -->
             {% else %}
             <div class="item">
                 <div class="slide-content">
-                    <img src="{{carouselObjects.painting.url}}" />
+                    <img src="{{carouselObjects.main_painting.url}}" />
                 </div>
             </div>
             {% endif %}
-            {% if "0" in carouselObjects.painting_right.url %}
+            <!-- 3 -->
+            {% if "0" in carouselObjects.painting_3.url %}
             <!-- skip it -->
             {% else %}
             <div class="item">
                 <div class="slide-content">
-                    <img src="{{carouselObjects.painting_right.url}}" />
+                    <img src="{{carouselObjects.painting_3.url}}" />
                 </div>
             </div>
             {% endif %}
-            {% if "0" in carouselObjects.painting_top.url %}
+            <!-- 4 -->
+            {% if "0" in carouselObjects.painting_4.url %}
             <!-- skip it -->
             {% else %}
             <div class="item">
                 <div class="slide-content">
-                    <img src="{{carouselObjects.painting_top.url}}" />
+                    <img src="{{carouselObjects.painting_4.url}}" />
                 </div>
             </div>
             {% endif %}
-            {% if "0" in carouselObjects.painting_bottom.url %}
+            <!-- 5 -->
+            {% if "0" in carouselObjects.painting_5.url %}
             <!-- skip it -->
             {% else %}
             <div class="item">
                 <div class="slide-content">
-                    <img src="{{carouselObjects.painting_bottom.url}}" />
+                    <img src="{{carouselObjects.painting_5.url}}" />
                 </div>
             </div>
             {% endif %}
-            {% if "0" in carouselObjects.painting_back.url %}
+            <!-- 6 -->
+            {% if "0" in carouselObjects.painting_6.url %}
             <!-- skip it -->
             {% else %}
             <div class="item">
                 <div class="slide-content">
-                    <img src="{{carouselObjects.painting_back.url}}" />
+                    <img src="{{carouselObjects.painting_6.url}}" />
+                </div>
+            </div>
+            {% endif %}
+            <!-- 7 -->
+            {% if "0" in carouselObjects.painting_7.url %}
+            <!-- skip it -->
+            {% else %}
+            <div class="item">
+                <div class="slide-content">
+                    <img src="{{carouselObjects.painting_7.url}}" />
+                </div>
+            </div>
+            {% endif %}
+            <!-- 8 -->
+            {% if "0" in carouselObjects.painting_8.url %}
+            <!-- skip it -->
+            {% else %}
+            <div class="item">
+                <div class="slide-content">
+                    <img src="{{carouselObjects.painting_8.url}}" />
+                </div>
+            </div>
+            {% endif %}
+            <!-- 9 -->
+            {% if "0" in carouselObjects.painting_9.url %}
+            <!-- skip it -->
+            {% else %}
+            <div class="item">
+                <div class="slide-content">
+                    <img src="{{carouselObjects.painting_9.url}}" />
+                </div>
+            </div>
+            {% endif %}
+            <!-- 10 -->
+            {% if "0" in carouselObjects.painting_10.url %}
+            <!-- skip it -->
+            {% else %}
+            <div class="item">
+                <div class="slide-content">
+                    <img src="{{carouselObjects.painting_10.url}}" />
                 </div>
             </div>
             {% endif %}
